--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
 
 	<div class="quiz-images">
 
-		<section class="reference-image">
-			<img src="" alt="" class="">
-			<img src="" alt="" class="">
+		<section class="reference-images">
+			<img src="http://i.imgur.com/PbPzYeW.png" alt="What is this feature?" class="reference-image-1">
 		</section>
 
 	</div>
